# blink

./: CMakeLists.txt  sdkconfig  sdkconfig.default  sdkconfig.old
main/: CMakeLists.txt  blink_example_main.c
